# Bins

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  cf_pages_deploy.yaml
source/: conf.py  index.rst
